; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-mxc/extr_time.c_gpt_irq_acknowledge.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-mxc/extr_time.c_gpt_irq_acknowledge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer_base = common dso_local global i64 0, align 8
@MX1_2_TSTAT = common dso_local global i64 0, align 8
@MX2_TSTAT_CAPT = common dso_local global i32 0, align 4
@MX2_TSTAT_COMP = common dso_local global i32 0, align 4
@MX3_TSTAT_OF1 = common dso_local global i32 0, align 4
@MX3_TSTAT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @gpt_irq_acknowledge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpt_irq_acknowledge() #0 {
  %1 = call i64 (...) @cpu_is_mx1()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i64, i64* @timer_base, align 8
  %5 = load i64, i64* @MX1_2_TSTAT, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @__raw_writel(i32 0, i64 %6)
  br label %8

8:                                                ; preds = %3, %0
  %9 = call i64 (...) @cpu_is_mx2()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %8
  %12 = load i32, i32* @MX2_TSTAT_CAPT, align 4
  %13 = load i32, i32* @MX2_TSTAT_COMP, align 4
  %14 = or i32 %12, %13
  %15 = load i64, i64* @timer_base, align 8
  %16 = load i64, i64* @MX1_2_TSTAT, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @__raw_writel(i32 %14, i64 %17)
  br label %19

19:                                               ; preds = %11, %8
  %20 = call i64 (...) @cpu_is_mx3()
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %19
  %23 = call i64 (...) @cpu_is_mx25()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %22, %19
  %26 = load i32, i32* @MX3_TSTAT_OF1, align 4
  %27 = load i64, i64* @timer_base, align 8
  %28 = load i64, i64* @MX3_TSTAT, align 8
  %29 = add nsw i64 %27, %28
  %30 = call i32 @__raw_writel(i32 %26, i64 %29)
  br label %31

31:                                               ; preds = %25, %22
  ret void
}

declare dso_local i64 @cpu_is_mx1(...) #1

declare dso_local i32 @__raw_writel(i32, i64) #1

declare dso_local i64 @cpu_is_mx2(...) #1

declare dso_local i64 @cpu_is_mx3(...) #1

declare dso_local i64 @cpu_is_mx25(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
